style.css
@import
url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Inter', sans-serif;
}

main {
    padding: 32px;
    overflow-x: hidden;
}

li {
    list-style-type: none
}

a {
    text-decoration: none;
}


img {
    width: 100%;
}

ul {
    display: flex;
}

.purple {
    color: #6415ff;
}


/* 

NAVIGATION

*/

.nav__container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
}

.logo {
    width: 40px;
    margin-right: 12px;
}

.nav__logo--wrapper {
    display: flex;
    align-items: center;
    margin-right: 24px;
}


nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav__link {
    margin: 0 24px;
    padding-bottom: 4px;
    font-size: 14px;
    font-weight: 600;
}

.login {
    display: flex;
    margin-left: 32px;
}

.nav__link--primary {
    background-color: #6415ff;
    border-radius: 50px;
    color: #ffff;
    font-size: 14px;
    font-weight: 550;
    padding: 12px 32px;
}

h5 {
    font-size: 16px;
}



/* 

HEADER

*/

header {
    position: relative;
}


.header__container {
    margin: 0 auto;
    max-width: 1280px;
    padding: 96px 0;
    display: flex;
}

.header__row {
    display: flex;
    align-items: center;
    max-width: 1280px;
    padding: 0 32px;
    width: 100%;
    
}

.header__description {
    min-width: 550px;
    width: 100%;
    flex: 4;
}


.header__title {
    font-size: 48px;
    font-weight: 700;

}

.header__para {
    font-size: 18px;
    line-height: 27px;
    margin: 32px 0;
}

.header__start {
    display: flex;
    align-items: center;
    max-width: 448px;
    position: relative;
    color: #fff;
}

.header__input {
    padding: 22px 0 22px 32px;
    border-radius: 50px;
    border: 2px solid #e8ecf1;
    width: 100%;
    font-size: 14px;
    font-weight: 500;
    color: #243e63;
}

.header__button {
    position: absolute;
    right:0;
    padding: 16px 0;
    width: 160px;
    min-width: 132px;
    border: none;
    border-radius: 50px;
    padding: 16px;
    background-color: #6415ff;
    color: #fff;
    margin: 8px 8px 8px 0;
    font-size: 16px;
    font-weight: 700px;
}

.header__customers--wrapper {
    margin-top: 80px;
    width: 100%;
    height: auto;
}

.header__customers--title {
    font-size: 12px;
    color: #a0aec0;
    font-weight: 700px;
    letter-spacing: 0.05em;
}

.header__customers--img {
    opacity: 0.5;
    margin-top: 16px;
    padding-right: 64px;
}

.header__img--wrapper {
    display: flex;
    align-items: center;
    flex: 6;
    max-width: 768px;
}


/*

FEATURES

*/

.features__container {
    position: relative;
    padding: 96px 0;
}

.features__title {
    margin-bottom: 16px;
    font-weight: 700;
    letter-spacing: 1.5px;
    display: flex;
    justify-content: center;
}

.features__subtitle {
    font-size: 48px;
    color: #243e63;
    font-weight: 900;
}

.features__para {
    width: 100%;
    text-align: center;
    margin-top: 16px;
    margin-bottom: 40px;
    max-width: 576px;
    font-size: 18px;
    font-weight: 500;
    line-height: 30px;
    color: #7c8ba1;
}

.service__row {
    width: 100%;
    max-width: 1024px;
    margin: 0 auto;
    display: flex;
    align-items: center;
}

.features__row {
    display: flex;
    flex-direction: column;
}

.feature__description--wrapper {
    margin-top: 8px;
    margin-left: 16px;
}

.features__description {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.features__service--wrapper {
    display: flex;
    flex-wrap: wrap;
}

.feature__service {
    padding: 32px 24px;
    width: calc(100% / 3);
    display: flex;
    align-items: flex-start;
}

.img__wrapper {
    border: 1px solid;
    border: rgb(226, 232, 240);
    flex-shrink: 0;
    border-radius: 500px;
    border-width: 1px;
    padding: 20px;
    text-align: center;   
}

.img__feature {
    width: 24px;
    height: 24px;
}

.feature__description--wrapper {
    margin-top: 8px;
    margin-left: 16px;
}

.service__title {
    color: #243e63;
    font-size: 24px;
    font-weight: bold;
    line-height: 1;
    letter-spacing: .4px;
}

.service__para {
    color: #7c8ba1;
    margin-top: 16px;
    font-weight: 500;
    line-height: 2;
    text-align: left;
}

